# tocify

./: .gitignore  README.md  digest.py  feeds.txt  interests.md  prompt.txt  pyproject.toml
