[project]
name = "tocify"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0.12",
    "google-generativeai>=0.8.6",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
]
